--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,20 @@
 name: flutter_localization_example
-description: A small Flutter localization example.
+description: A Flutter localization example.
 
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^0.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  intl_translation: "^0.16.7"
 
 
 # For information on the generic Dart part of this file, see the
